--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -436,7 +436,7 @@ jobs:
         run: zcat artifacts/cli.zstd | docker load
 
       - name: Setup using cli
-        run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${REGISTRY}/${CLI_IMAGE_NAME}:latest --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
+        run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.changes.outputs.tag }} --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
       - name: Run tests
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
         env:
