--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -1,4 +1,4 @@
-name: builder image
+name: builder image builder pipeline
 
 on:
   push:
@@ -23,14 +23,11 @@ jobs:
     runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16-4
-    defaults:
-      run:
-        working-directory: images/proto
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Docker build
-        run: docker build -t ${REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+        run: docker build -t ${REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} images/proto
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
